Fix missing stroke color

--- a/backend/Untitled.ipynb
+++ b/backend/Untitled.ipynb
@@ -96,6 +96,199 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 152,
+   "id": "032a50f0-6790-4b9d-b7a6-6f411106ccc4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_d7cdaa81b902a9bd3090a4605cc5c4b1 {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "    \n",
+       "                    &lt;style&gt;\n",
+       "                        .foliumtooltip {\n",
+       "                            \n",
+       "                        }\n",
+       "                       .foliumtooltip table{\n",
+       "                            margin: auto;\n",
+       "                        }\n",
+       "                        .foliumtooltip tr{\n",
+       "                            text-align: left;\n",
+       "                        }\n",
+       "                        .foliumtooltip th{\n",
+       "                            padding: 2px; padding-right: 8px;\n",
+       "                        }\n",
+       "                    &lt;/style&gt;\n",
+       "            \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_d7cdaa81b902a9bd3090a4605cc5c4b1&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_d7cdaa81b902a9bd3090a4605cc5c4b1 = L.map(\n",
+       "                &quot;map_d7cdaa81b902a9bd3090a4605cc5c4b1&quot;,\n",
+       "                {\n",
+       "                    center: [52.39297403146796, 13.126961269629078],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    zoom: 10,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "            L.control.scale().addTo(map_d7cdaa81b902a9bd3090a4605cc5c4b1);\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_a3327bc97ce1db4e15c347ad740e74aa = L.tileLayer(\n",
+       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_d7cdaa81b902a9bd3090a4605cc5c4b1);\n",
+       "        \n",
+       "    \n",
+       "            map_d7cdaa81b902a9bd3090a4605cc5c4b1.fitBounds(\n",
+       "                [[52.39196867697583, 13.123296392142747], [52.39397938596009, 13.130626147115407]],\n",
+       "                {}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "        function geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_styler(feature) {\n",
+       "            switch(feature.id) {\n",
+       "                default:\n",
+       "                    return {&quot;fillOpacity&quot;: 0.5, &quot;weight&quot;: 2};\n",
+       "            }\n",
+       "        }\n",
+       "        function geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_highlighter(feature) {\n",
+       "            switch(feature.id) {\n",
+       "                default:\n",
+       "                    return {&quot;fillOpacity&quot;: 0.75};\n",
+       "            }\n",
+       "        }\n",
+       "        function geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_pointToLayer(feature, latlng) {\n",
+       "            var opts = {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;#3388ff&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: true, &quot;fillColor&quot;: &quot;#3388ff&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;opacity&quot;: 1.0, &quot;radius&quot;: 2, &quot;stroke&quot;: true, &quot;weight&quot;: 3};\n",
+       "            \n",
+       "            let style = geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_styler(feature)\n",
+       "            Object.assign(opts, style)\n",
+       "            \n",
+       "            return new L.CircleMarker(latlng, opts)\n",
+       "        }\n",
+       "\n",
+       "        function geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_onEachFeature(feature, layer) {\n",
+       "            layer.on({\n",
+       "                mouseout: function(e) {\n",
+       "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
+       "                        geo_json_e55f8a7c8384c9fa1475c04d40e5d86b.resetStyle(e.target);\n",
+       "                    }\n",
+       "                },\n",
+       "                mouseover: function(e) {\n",
+       "                    if(typeof e.target.setStyle === &quot;function&quot;){\n",
+       "                        const highlightStyle = geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_highlighter(e.target.feature)\n",
+       "                        e.target.setStyle(highlightStyle);\n",
+       "                    }\n",
+       "                },\n",
+       "            });\n",
+       "        };\n",
+       "        var geo_json_e55f8a7c8384c9fa1475c04d40e5d86b = L.geoJson(null, {\n",
+       "                onEachFeature: geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_onEachFeature,\n",
+       "            \n",
+       "                style: geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_styler,\n",
+       "                pointToLayer: geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_pointToLayer\n",
+       "        });\n",
+       "\n",
+       "        function geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_add (data) {\n",
+       "            geo_json_e55f8a7c8384c9fa1475c04d40e5d86b\n",
+       "                .addData(data)\n",
+       "                .addTo(map_d7cdaa81b902a9bd3090a4605cc5c4b1);\n",
+       "        }\n",
+       "            geo_json_e55f8a7c8384c9fa1475c04d40e5d86b_add({&quot;bbox&quot;: [13.123296392142747, 52.39196867697583, 13.130626147115407, 52.39397938596009], &quot;features&quot;: [{&quot;bbox&quot;: [13.128872038494052, 52.39397938596009, 13.128872038494052, 52.39397938596009], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.128872038494052, 52.39397938596009], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;0&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 30, &quot;pollution&quot;: 29}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.128887672361998, 52.39386081437033, 13.128887672361998, 52.39386081437033], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.128887672361998, 52.39386081437033], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;1&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 30, &quot;pollution&quot;: 11}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.128088111719222, 52.39383900806595, 13.128088111719222, 52.39383900806595], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.128088111719222, 52.39383900806595], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;2&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 30, &quot;pollution&quot;: 42}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.126950644230845, 52.39335801400036, 13.126950644230845, 52.39335801400036], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.126950644230845, 52.39335801400036], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;3&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 30, &quot;pollution&quot;: 7}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.12667027538211, 52.39333550196211, 13.12667027538211, 52.39333550196211], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.12667027538211, 52.39333550196211], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;4&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 100, &quot;pollution&quot;: 10}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.125414805159553, 52.39235201576551, 13.125414805159553, 52.39235201576551], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.125414805159553, 52.39235201576551], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;5&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 10, &quot;pollution&quot;: 30}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.126149101982179, 52.39276681399983, 13.126149101982179, 52.39276681399983], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.126149101982179, 52.39276681399983], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;6&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 40, &quot;pollution&quot;: 100}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.129773832672216, 52.393307160195974, 13.129773832672216, 52.393307160195974], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.129773832672216, 52.393307160195974], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;7&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 80, &quot;pollution&quot;: 25}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.12965991835736, 52.39240977806152, 13.12965991835736, 52.39240977806152], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.12965991835736, 52.39240977806152], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;8&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 10, &quot;pollution&quot;: 1}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.129281929947267, 52.392498253167304, 13.129281929947267, 52.392498253167304], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.129281929947267, 52.392498253167304], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;9&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 40, &quot;pollution&quot;: 90}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.129696163820059, 52.393079656592725, 13.129696163820059, 52.393079656592725], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.129696163820059, 52.393079656592725], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;10&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 55, &quot;pollution&quot;: 15}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.129861857370601, 52.39252669155667, 13.129861857370601, 52.39252669155667], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.129861857370601, 52.39252669155667], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;11&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 45, &quot;pollution&quot;: 78}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.124318745607752, 52.39273669951277, 13.124318745607752, 52.39273669951277], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.124318745607752, 52.39273669951277], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;12&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 10, &quot;pollution&quot;: 99}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.124185957866757, 52.39196867697583, 13.124185957866757, 52.39196867697583], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.124185957866757, 52.39196867697583], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;13&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 30, &quot;pollution&quot;: 20}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.123296392142747, 52.392557826700155, 13.123296392142747, 52.392557826700155], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.123296392142747, 52.392557826700155], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;14&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 30, &quot;pollution&quot;: 10}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.124711126741545, 52.39371107914512, 13.124711126741545, 52.39371107914512], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.124711126741545, 52.39371107914512], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;15&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 17, &quot;pollution&quot;: 33}, &quot;type&quot;: &quot;Feature&quot;}, {&quot;bbox&quot;: [13.130626147115407, 52.39391403056459, 13.130626147115407, 52.39391403056459], &quot;geometry&quot;: {&quot;coordinates&quot;: [13.130626147115407, 52.39391403056459], &quot;type&quot;: &quot;Point&quot;}, &quot;id&quot;: &quot;16&quot;, &quot;properties&quot;: {&quot;nature_effected&quot;: 10, &quot;pollution&quot;: 90}, &quot;type&quot;: &quot;Feature&quot;}], &quot;type&quot;: &quot;FeatureCollection&quot;});\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    geo_json_e55f8a7c8384c9fa1475c04d40e5d86b.bindTooltip(\n",
+       "    function(layer){\n",
+       "    let div = L.DomUtil.create(&#x27;div&#x27;);\n",
+       "    \n",
+       "    let handleObject = feature=&gt;typeof(feature)==&#x27;object&#x27; ? JSON.stringify(feature) : feature;\n",
+       "    let fields = [&quot;pollution&quot;, &quot;nature_effected&quot;];\n",
+       "    let aliases = [&quot;pollution&quot;, &quot;nature_effected&quot;];\n",
+       "    let table = &#x27;&lt;table&gt;&#x27; +\n",
+       "        String(\n",
+       "        fields.map(\n",
+       "        (v,i)=&gt;\n",
+       "        `&lt;tr&gt;\n",
+       "            &lt;th&gt;${aliases[i]}&lt;/th&gt;\n",
+       "            \n",
+       "            &lt;td&gt;${handleObject(layer.feature.properties[v])}&lt;/td&gt;\n",
+       "        &lt;/tr&gt;`).join(&#x27;&#x27;))\n",
+       "    +&#x27;&lt;/table&gt;&#x27;;\n",
+       "    div.innerHTML=table;\n",
+       "    \n",
+       "    return div\n",
+       "    }\n",
+       "    ,{&quot;className&quot;: &quot;foliumtooltip&quot;, &quot;sticky&quot;: true});\n",
+       "                     \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x7fe1d1237490>"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "photo_points.explore()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 119,
    "id": "2792302d-c186-4161-8d31-ca760c26677b",
    "metadata": {
